sandbox/output
MockTurnNumberSequence.java:10: error: getNextTurnNumber() in MockTurnNumberSequence cannot override getNextTurnNumber() in TurnNumberSequence
    public int getNextTurnNumber() {
               ^
  overridden method is static
MockTurnNumberSequence.java:9: error: method does not override or implement a method from a supertype
    @Override
    ^
2 errors
